--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.bg-white\/60 {
+  background-color: rgb(225, 223, 223);
+}
