--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,6 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,400;9..40,700&family=Poppins:wght@300&display=swap');
-
 *{
   transition: all;
   transition-duration: 1000ms all;
@@ -29,4 +27,21 @@ code {
 
 font-pop {
   font-family: 'Poppins', sans-serif;
+}
+
+.sb {
+  justify-content: space-between;
+}
+
+.video-responsive {
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
+}
+
+.video-responsive iframe {
+  right: 0;
+  height: 50vw;
+  width: 80vw;
+  position: absolute;
 }
